objects/CG_Claim_Audit_Log__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store all the messages, Fields and Events of Claim Audit Log</description>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>To store the Audit Action Type (Ex. Field Add/Event Add)</description>
        <label>Action Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dynamic Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Message__c</fullName>
        <label>Edit Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_Message__c</fullName>
        <label>Remove Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isServicejob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isServicejob</label>
        <type>Checkbox</type>
    </fields>
    <label>CG Claim Audit Log</label>
</CustomObject>